Documentation of artifact testing, close #3

--- a/docs/_static/style.css
+++ b/docs/_static/style.css
@@ -5,3 +5,8 @@ dl.field-list.simple {
 dd.field-odd ul.simple{
     margin-bottom: 12px;
 }
+
+.audio_title{
+    margin-bottom: 0;
+    margin-top: 12px;
+}
